fix(home): css contrast

--- a/src/components/sections/Choose/Choose.module.css
+++ b/src/components/sections/Choose/Choose.module.css
@@ -15,7 +15,7 @@
 }
 
 .descriptionText {
-  @apply opacity-60;
+  @apply opacity-80;
 }
 
 .descriptionLink {
